--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="card">
         <h1>Proyectos GitHub</h1>
         <div class="projects">
-            <h3 class="text" href="https://dangagde.github.io/wpt-iopadel.io/">🎾Marcador Padel</a>
+            <a class="text" href="https://dangagde.github.io/wpt-iopadel.io/">🎾Marcador Padel</a>
                 <p>HTML / CSS / JS / JSON</p>
-            <h3 class="text" href="https://dangagde.github.io/ruta-kebab/">🌯Ruta Kebab</a>
+            <a class="text" href="https://dangagde.github.io/ruta-kebab/">🌯Ruta Kebab</a>
                 <p>HTML / CSS / JSON / API / MAP</p>
-            <h3 class="text" href="https://dangagde.github.io/artesaniarodriguez/">💼Artesania Rodriguez</a>
+            <a class="text" href="https://dangagde.github.io/artesaniarodriguez/">💼Artesania Rodriguez</a>
                 <p>HTML / BOOTSTRAP / JS / JSON</p>
         </div>
         
