--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <p>HTML / CSS / JSON / API / MAP</p>
             <a class="text" href="https://dangagde.github.io/artesaniarodriguez/">💼Artesania Rodriguez</a>
                 <p>HTML / BOOTSTRAP / JS / JSON</p>
+            <a class="text" href="https://artesaniarodriguezsevilla.com/">💼WP Artesania Rodriguez</a>
+                <p>WORDPRESS / ELEMENTOR / SEO</p>
         </div>
         
 
